--- a/src/index.css
+++ b/src/index.css
@@ -119,8 +119,8 @@
   }
 }
 
-/* @layer components {
+@layer components {
   .section {
-    @apply mx-auto max-w-screen-xl ;
+    @apply mx-auto container px-4;
   }
-} */
+}
